apps/app-silvestrini/loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-app-silvestrini
spec:
  selector:
    app: app-silvestrini
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 9001
    protocol: TCP
