apps/app-silvestrini/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-silvestrini
spec:
  rules:
  - host: app-silvestrini.skynet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-silvestrini
            port:
              number: 80
  ingressClassName: nginx
